--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
       </header>
       <section>
         <div class="movie-container">
-          <div class="movie-box">
+          <!-- <div class="movie-box">
             <img src="" alt="" />
             <div class="movie-info-box">
               <div class="title-score">
@@ -33,46 +33,7 @@
                 줄거리 부분<br />영화 줄거리 부분<br />
               </p>
             </div>
-          </div>
-          <div class="movie-box">
-            <img src="" alt="" />
-            <div class="movie-info-box">
-              <div class="title-score">
-                <p class="title">영화 제목</p>
-                <p class="score">평점</p>
-              </div>
-              <p>
-                영화 줄거리 부분<br />영화 줄거리 부분<br />영화 줄거리 부분<br />영화
-                줄거리 부분<br />영화 줄거리 부분<br />
-              </p>
-            </div>
-          </div>
-          <div class="movie-box">
-            <img src="" alt="" />
-            <div class="movie-info-box">
-              <div class="title-score">
-                <p class="title">영화 제목</p>
-                <p class="score">평점</p>
-              </div>
-              <p>
-                영화 줄거리 부분<br />영화 줄거리 부분<br />영화 줄거리 부분<br />영화
-                줄거리 부분<br />영화 줄거리 부분<br />
-              </p>
-            </div>
-          </div>
-          <div class="movie-box">
-            <img src="" alt="" />
-            <div class="movie-info-box">
-              <div class="title-score">
-                <p class="title">영화 제목</p>
-                <p class="score">평점</p>
-              </div>
-              <p>
-                영화 줄거리 부분<br />영화 줄거리 부분<br />영화 줄거리 부분<br />영화
-                줄거리 부분<br />영화 줄거리 부분<br />
-              </p>
-            </div>
-          </div>
+          </div> -->
         </div>
         <i class="fa-solid fa-arrow-up up-btn"></i>
       </section>
