main2.js 파일에 연습 중

--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
   <body>
     <div class="wrap">
       <header>
-        <p>Sparta Movie Theater</p>
+        <p id="main-page">Sparta Movie Theater</p>
         <div class="search-container">
           <input type="text" placeholder="검색어 입력" />
           <button class="search-btn">검색</button>
@@ -31,6 +31,6 @@
         <p>copyright ⓒ 김현진 All right reserved.</p>
       </footer>
     </div>
-    <script src="main.js"></script>
+    <script src="main2.js"></script>
   </body>
 </html>
