--- a/main.html
+++ b/main.html
@@ -31,6 +31,6 @@
         <p>copyright ⓒ 김현진 All right reserved.</p>
       </footer>
     </div>
-    <script src="main2.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
