gitignore 파일 추가

--- a/main.html
+++ b/main.html
@@ -13,6 +13,13 @@
   <body>
     <div class="wrap">
       <header>
+        <!-- 모달창 구현 중 -->
+        <!-- <div class="modal-box">
+          <div class="modal">
+            <p>메시지 내용</p>
+            <button id="check-btn">확인</button>
+          </div>
+        </div> -->
         <p id="main-page">Sparta Movie Theater</p>
         <div class="search-container">
           <input type="text" placeholder="검색어 입력" />
