코드 리팩토링

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <!-- <link rel="stylesheet" href="reset.css"> -->
     <link rel="stylesheet" href="./style/style.css" />
-    <script src="./src/main.js" type="module"></script>
+    <!-- <script src="./src/main.js" type="module"></script> -->
   </head>
   <body>
     <header>
@@ -38,6 +38,6 @@
       <br />
       <p>copyright ⓒ 김현진 All right reserved.</p>
     </footer>
-    <!-- <script src="./src/main.js"></script> -->
+    <script src="./src/main.js"></script>
   </body>
 </html>
