--- a/index.html
+++ b/index.html
@@ -10,19 +10,16 @@
     />
     <!-- <link rel="stylesheet" href="reset.css"> -->
     <link rel="stylesheet" href="./style/style.css" />
-    <!-- <script src="./src/main.js" type="module"></script> -->
+    <script src="./src/main.js" type="module"></script>
   </head>
   <body>
     <header>
-      <!-- 모달창 구현 중 -->
-      <!-- <div class="modal-box">
-          <div class="modal">
-            <p>메시지 내용</p>
-            <button id="check-btn">확인</button>
-          </div>
-        </div> -->
+      <div class="modal-box">
+        <p class="message"></p>
+        <button class="check-btn">확인</button>
+      </div>
       <h1 id="main-page">Sparta Movie Theater</h1>
-      <form class="search-container">
+      <form>
         <input type="text" placeholder="검색어 입력" />
         <button class="search-btn">검색</button>
       </form>
@@ -38,6 +35,5 @@
       <br />
       <p>copyright ⓒ 김현진 All right reserved.</p>
     </footer>
-    <script src="./src/main.js"></script>
   </body>
 </html>
